<resources>
    <string name="app_name">AndroidStudy</string>
    <string name="long_text">
        1994年，著名的美国科普作家卡尔·萨根（Carl Sagan）有感而发，写了一篇短文《暗淡蓝点》（pale blue dot），后来成为名篇。他这样写道：再看一下这个点吧。它在那里。那就是我们的家，我们的一切。在它上面，有你爱的每个人、你认识的每个人、你听说过的每个人。历史上的每一个人，都在它上面度过了自己的一生。所有我们的欢乐和痛苦，所有言之凿凿的宗教、意识形态和经济思想，所有猎人和强盗，所有英雄和懦夫，所有文明的创造者和毁灭者，所有的皇帝和农夫，所有热恋中的青年情侣，所有的父母、满怀希望的孩子、发明者和探索者，所有精神导师，所有腐败的政治家，所有“超级明星”，所有“最高领导人”，所有圣徒和罪人，从人类这个种族存在的第一天起——都发生在这颗悬浮在太阳光中的尘埃上。地球是宇宙竞技场中的一个小舞台。那些将军和帝王，那些成败和荣辱，那些血流成河，那些霸业和辉煌，不过只发生在这个点上的一部分地区，转瞬即逝。想想这个小点上，一个角落的居民对另一个角落的居民，往往会表现出无限的残忍，无所不在的误解，互相残杀的热切，以及难以化解的仇恨。我们故作姿态，我们自以为很重要，我们自欺欺人地认定人类在宇宙中的特权地位，这一切都被这个白光中的小点推翻了。我们的星球是宇宙无边的黑暗中一颗孤独的尘埃。茫茫黑暗中，无尽的未知，我们一点都不知道，哪里可以找到帮助。地球是迄今为止，唯一的已知存在生命的地方。至少在可预见的将来，人类也不会找到其他可以移民的地方。访问其他星球，可以做到。定居在那里，没有可能。不管是否接受，目前地球是我们仅有的立足之地。据说天文学是一种令人产生自卑、塑造人格的科学。也许这张表现我们的世界是如何渺小的照片，是人类愚蠢自负的最好证明。对我来说，它更表明，我们人类之间必须友善相处，珍惜和保护这个黯淡的蓝点。它是我们唯一的家。
    </string>
    <string name="abc">
        这是abc的内容
    </string>
    <string name="start_select_food">开始选餐</string>
    <string name="name">姓名</string>
    <string name="edit_text_input_hint_name">请输入姓名</string>
    <string name="sex">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="fancy_food">喜好</string>
    <string name="hot_tasting">辣</string>
    <string name="fish_tasting">海鲜</string>
    <string name="sour_tasting">酸</string>
    <string name="budget_name">预算</string>
    <string name="start_budget">0元</string>
    <string name="end_budget">100元</string>
    <string name="next_dishes">下一个</string>
    <string name="food_full_message">显示信息</string>
    <string name="search_dishes_name">寻找菜品</string>
</resources>
