<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MealsChooseActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#B9B9FF"
        android:text="@string/start_select_food"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="#8A2B12"
        android:textStyle="bold|italic"
        android:typeface="monospace"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:layout_height="45dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/name"
                android:textSize="22sp"/>
            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/edit_text_input_hint_name"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:layout_height="45dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/sex"
                android:textSize="22sp"/>
            <RadioGroup
                android:id="@+id/sexRadioGroup"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <RadioButton
                    android:id="@+id/maleRadioButton"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:textSize="22sp"/>
                <RadioButton
                    android:id="@+id/femaleRadioButton"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:textSize="22sp"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:layout_height="45dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/fancy_food"
                android:textSize="22sp"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">
                <CheckBox
                    android:id="@+id/hotCheckBox"
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:text="@string/hot_tasting"
                    android:textSize="22sp"/>
                <CheckBox
                    android:id="@+id/fishCheckBox"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/fish_tasting"
                    android:textSize="22sp"/>
                <CheckBox
                    android:id="@+id/sourCheckBox"
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sour_tasting"
                    android:textSize="22sp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:layout_height="45dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/budget_name"
                android:textSize="22sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_budget"
                    android:textSize="22sp"
                    android:gravity="center"/>
                <SeekBar
                    android:id="@+id/seekBar"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:max="100"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_budget"
                    android:textSize="22sp"
                    android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/searchButton"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/search_dishes_name"
            android:textSize="22sp"
            android:gravity="center"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        
        <ImageView
            android:id="@+id/foodImageView"
            android:layout_width="match_parent"
            android:layout_height="0dp" 
            android:layout_weight="3"/>
        <ToggleButton
            android:id="@+id/showToggleButton"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:textOff="@string/next_dishes"
            android:textOn="@string/food_full_message"
            android:textSize="22sp"
            android:layout_gravity="center"/>
        
    </LinearLayout>

</LinearLayout>